Bring the now again flaky test InternalEngineTests.testRebuildLocalCheckpointTracker into the fold